# producer_consumer

./: .gitignore  CMakeLists.txt  README.md  env.bash
src/: Engine.cpp  Engine.hpp  main.cpp
src/Analyzer/: Analyzer.cpp  Analyzer.hpp
src/ConcurrencyEngine/: Thread.hpp
src/Configurations/: DummyConfigurations.hpp
src/Frames/: MacFrame.hpp
src/Generator/: Generator.cpp  Generator.hpp
src/Queues/: Queue.hpp
src/Thread/: Thread.hpp
